# archive-canister

./: .env  Cargo.toml  dfx.json
.dfx/local/: canister_ids.json  network-id
.dfx/local/canisters/archive/: archive.wasm  init_args.txt  service.did.d.ts  service.did.js
.dfx/local/lsp/: cbopz-duaaa-aaaaa-qaaka-cai.did
src/: main.rs
